samples/kubernetes-sample/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apache-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: curso.prueba.com
      http:
        paths:
          - path: /apache
            pathType: Exact
            backend:
              service:
                name: apache
                port:
                  number: 80
          - path: /nginx
            pathType: Exact
            backend:
              service:
                name: nginx
                port:
                  number: 80
